# speedrun-api

./: Cargo.toml  README.md  rustfmt.toml
examples/: category.rs  developers.rs  engines.rs  games.rs  gametypes.rs  genres.rs  guests.rs  leaderboards.rs  levels.rs  platforms.rs  publishers.rs  regions.rs  runs.rs  series.rs  users.rs  variables.rs
src/: api.rs  auth.rs  client.rs  error.rs  lib.rs  types.rs
src/api/: categories.rs  client.rs  common.rs  developers.rs  endpoint.rs  engines.rs  error.rs  games.rs  gametypes.rs  genres.rs  guests.rs  leaderboards.rs  levels.rs  notifications.rs  pagination.rs  platforms.rs  profile.rs  publishers.rs  query.rs  query_params.rs  regions.rs  runs.rs  series.rs  users.rs  utils.rs  variables.rs
src/types/: category.rs  category_impls.rs  common.rs  developer_impls.rs  developers.rs  engine_impls.rs  engines.rs  game_impls.rs  games.rs  gametype_impls.rs  gametypes.rs  genre_impls.rs  genres.rs  guest_impls.rs  guests.rs  leaderboard_impls.rs  leaderboards.rs  levels.rs  levels_impls.rs  notifications.rs  platform_impls.rs  platforms.rs  publisher_impls.rs  publishers.rs  region_impls.rs  regions.rs  run_impls.rs  runs.rs  series.rs  series_impls.rs  user_impls.rs  users.rs  variable_impls.rs  variables.rs
