[package]
name = "speedrun-api"
version = "0.1.0"
authors = ["Nathan Caldwell <saintdev@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
bytes = "1.0.1"
derive_builder = "0.10.2"
http = "0.2.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_urlencoded = "0.7.0"
thiserror = "1.0.25"
url = { version = "2.2.2", features = ["serde"] }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
log = "0.4.14"
futures = "0.3.15"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.8.4"
